# test-actions

./: .gitignore  404.html  README.md  index.html  sitemap.xml  versions.json
0.1/: 404.html  index.html  sitemap.xml
0.1.0/: 404.html  index.html  sitemap.xml
0.2/: 404.html  index.html  sitemap.xml
0.2.0/: 404.html  index.html  sitemap.xml
0.3/: 404.html  index.html  sitemap.xml
0.4/: 404.html  index.html  sitemap.xml
0.4.8/: 404.html  index.html  sitemap.xml
0.5/: 404.html  index.html  objects.inv  sitemap.xml
0.7/: 404.html  index.html  sitemap.xml
0.8/: 404.html  index.html  sitemap.xml
about/: index.html
bridgic-core/: pyproject.toml
bridgic-core/bridgic/core/agentic/: __init__.py  _concurrent_automa.py
docs/: CNAME  Makefile  README.md  mkdocs.yml  pyproject.toml
docs/docs/: about.md  index.md  index.zh.md  mkdocs_optimization.md  test_add_page.md
docs/docs/assets/: .gitkeep
docs/docs/javascripts/: modify-lang-a-href.js
docs/scripts/: doc_config.yaml  gen_mkdocs_yml.py  mkdocs_template.yml
docs/templates/python/material/: function.html.jinja
mkdocs_optimization/: index.html
search/: search_index.json
stylesheets/: extra.css
v0.1.0/: 404.html  index.html  sitemap.xml
v0.1.1/: 404.html  index.html  sitemap.xml
v0.1.2/: 404.html  index.html  sitemap.xml
v0.1.3/: 404.html  index.html  objects.inv  sitemap.xml
v0.3.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.4.0/: 404.html  index.html  sitemap.xml
v0.4.1/: 404.html  index.html  sitemap.xml
v0.4.11/: 404.html  index.html  sitemap.xml
v0.4.12/: 404.html  index.html  sitemap.xml
v0.4.14/: 404.html  index.html  sitemap.xml
v0.4.15/: 404.html  index.html  sitemap.xml
v0.4.16/: 404.html  index.html  objects.inv  sitemap.xml
v0.4.2/: 404.html  index.html  sitemap.xml
v0.4.3/: 404.html  index.html  sitemap.xml
v0.4.4/: 404.html  index.html  sitemap.xml
v0.4.5/: 404.html  index.html  sitemap.xml
(+162 files in other folders)
