[project]
name = "docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "griffe-fieldz>=0.3.0",
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.3",
    "mkdocs-material>=9.6.19",
    "mkdocstrings[python]>=0.30.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.8",
    "mkdocs-git-committers-plugin-2>=2.3.0",
    "mkdocs-minify-plugin>=0.8.0",
]
